# proc-macro-workshop-solution-part1

./: Cargo.toml  README.md
src/: impl_body.rs  lib.rs
tests/: 01-parse.rs  02-create-builder.rs  03-call-setters.rs  04-call-build.rs  05-method-chaining.rs  06-optional-field.rs  07-repeated-field.rs  08-unrecognized-attribute.rs  08-unrecognized-attribute.stderr  09-redefined-prelude-types.rs
