[package]
name = "mymacro"
version = "0.1.0"
autotests = false
edition = "2024"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }


[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = {version = "2.0.98", features = ["extra-traits"]}
